# Agentic

./: pyproject.toml  requirements.txt
lang/: langintro.ipynb  messages.ipynb  structureOutput.ipynb  tools.ipynb
